Final Revised: FINAL for grade

--- a/Mark_AboutMe.html
+++ b/Mark_AboutMe.html
@@ -4,7 +4,7 @@
       <link href="bootstrap-4.1.2-dist/css/bootstrap.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <div class="container">
+    <div class="container"> <!--Navbar-->
       <nav class="nav nav-fill nav-pills">
         <a class="nav-item nav-link" href="index.html">Home</a>
         <a class="nav-item nav-link active" href="Mark_AboutMe.html">About Me</a>
@@ -15,7 +15,6 @@
     </div>
     <div class="jumbotron">
       <h1>Online Portfolio</h1>
-      <p>Mark Owen Macasaet</p>
       <p>You can contact me at markowenmacasaet@gmail.com</p>
     </div>
     
@@ -23,68 +22,67 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <a href="#">
-              <img src="Images/Me.png" class="img-thumbnail">
+            <a href="#">  <!--Placeholder-->
+              <img src="Images/Me.png" class="img-thumbnail float-left"> <!--Makes image of me stay left of text-->
             </a>
           </div>
-          <div class="col-md-12 row">
-            <h4><u>General:</u></h4>
-            <p>Hi, welcome to my online portfolio!  I am Mark Owen Macasaet, and 
-            I am a freshman at Dublin High School.  I am always focused on my 
-            studies and I put my best effort in every subject I take.  In my 
-            free time, I enjoy playing video games, mainly Fortnite, and I love
-            competing against others when playing.  As a hobby as well as for 
-            school, I practice the violin, and I have been doing so for about 4 
-            years now.</p>
-          </div>
-          <div class="col-md-12 row text-align:justify">
-            <h4><u>Career Goal:</u></h4>
-            <p>As of now, I am freshman trying to figure out where to 
-            go next in my life plan.  I am looking to obtain a job as an 
-            aerospace engineer, which is a job that I would probably enjoy the 
-            most.  I am interested in design and I want to be able to make 
-            scientific discoveries that make a difference in the world.</p>
-          </div>
-          <div class="col-md-12 row text-align:justify">
-            <h4><u>Qualities and Skills:</u></h4>
-            <p>I excel in being creative in everyday activities as well as 
-            academic work.  I put my best effort in all my work and practices 
-            that pay off in the best results.  I stay determined and persevere 
-            through all hardships, and I do not give up.  I have basic coding 
-            skills consisting of coding for HTML, CSS, Command Line, Bootstrap, 
-            and Python.  I am in an advanced class for math (Algebra 
-            2/Trigonometry) that is above my current grade level.  I focus on
-            studies and prioritize it more than other activities.  I also am a 
-            very good leader, and I can be part of a team.  For example, I am 
-            part of the Dublin High School Orchestra, where I have to make sure 
-            I contribute as much as I can.</p>
-          <div class="col-md-12 row text-align:justify">
-            <h4><u>Achievements:</u></h4>
-            <p>I succeeded in many activities throughout my life, the most 
-            important being academically.  I am taking many advanced classes for
-             this year of highschool so I can really challenge myself.  I 
-            currently have a 4.0 GPA, from all my classes having high grades.  
-            In my extracurricular activities, I have earned a black belt in 
-            martial arts after attending for 5-years, and I have improved 
-            greatly in playing violin since I have started practicing 4 years 
-            ago.</p>
-          </div>
+          <div class="col-7">  <!--Text takes up 7 columns-->
+            <div class="row">
+              <h4><u>General:</u></h4>
+              <p>Hi, welcome to my online portfolio!  I am Mark Owen Macasaet, 
+              and I am a freshman at Dublin High School.  I am always focused on 
+              my studies and I put my best effort in every subject I take.  In 
+              my free time, I enjoy playing video games, mainly Fortnite, and I 
+              love competing against others when playing.  As a hobby as well as 
+              for school, I practice the violin, and I have been doing so for 
+              about 4 years now.</p>
+            </div>
+            <div class="row">
+              <h4><u>Career Goal:</u></h4>
+              <p>As of now, I am freshman trying to figure out where to 
+              go next in my life plan.  I am looking to obtain a job as an 
+              aerospace engineer, which is a job that I would probably enjoy the 
+              most.  I am interested in design and I want to be able to make 
+              scientific discoveries that make a difference in the world.</p>
+            </div>
+            <div class="row">
+              <h4><u>Qualities and Skills:</u></h4>
+              <p>I excel in being creative in everyday activities as well as 
+              academic work.  I put my best effort in all my work and practices 
+              that pay off in the best results.  I stay determined and persevere 
+              through all hardships, and I do not give up.  I have basic coding 
+              skills consisting of coding for HTML, CSS, Command Line, 
+              Bootstrap, and Python.  I am in an advanced class for math 
+              (Algebra 2/Trigonometry) that is above my current grade level.  I 
+              focus on studies and prioritize it more than other activities.  I 
+              also am a very good leader, and I can be part of a team.  For 
+              example, I am part of the Dublin High School Orchestra, where I 
+              have to make sure I contribute as much as I can.</p>
+            </div>
+            <div class="row">
+              <h4><u>Achievements:</u></h4>
+              <p>I succeeded in many activities throughout my life, the most 
+              important being academically.  I am taking many advanced classes 
+              for this year of highschool so I can really challenge myself.  I 
+              currently have a 4.0 GPA, from all my classes having high grades.  
+              In my extracurricular activities, I have earned a black belt in 
+              martial arts after attending for 5-years, and I have improved 
+              greatly in playing violin since I have started practicing 4 years 
+              ago.</p>
+            </div>
           </div>
         </div>
       </div>
     </section>
     
-    <footer>
+    <footer> <!--More links related-->
       <div class="jumbotron">
         <div class="row">
-          <div class= col-3>
+          <div class="col-2">
+          </div>
+          <div class= "col-3">
             <a href="mailto:markowenmacasaet@gmail.com">
               <img src="Images/Mail.png" style='max-width=100px' width=125px height=100px>
-            </a>
-          </div>
-          <div class="col-3">
-            <a href="">
-              <img src="" style='max-width=100px' width=px height=px>
             </a>
           </div>
           <div class="col-5">
