--- a/Mark_Projects.html
+++ b/Mark_Projects.html
@@ -18,8 +18,8 @@
       <p>Here are school projects I have worked on so far in this school year.</p>
     </div>
       <div class="container">
-        <div class="row">
-          <div class="col-sm-6">
+        <div class="row"> <!--Makes sure that all content is arranged in rows for organization-->
+          <div class="col-sm-7"> <!--Text takes up 7 columns-->
             <strong>School Project</strong>
             <h3>Scratch Project CSP</h3>
             <h4>September 2018</h4>
@@ -35,13 +35,13 @@
             We also made sure we had days when we would remix each other's 
             projects to keep the features up to date.</p>
             <a href="https://docs.google.com/document/d/1MoVRcfQbzQwSf_Of1W-ZBfRAayjx381MG0O0Gyib9ZY/edit?usp=sharing">Click here to see documentation</a>
-          <div class="row">
-            <iframe allowtransparency="true" width="480" height="400" src="//scratch.mit.edu/projects/embed/244988755/?autostart=false" frameborder="0" allowfullscreen></iframe>
-          </div>
+            </div>
+          <div class="col-sm-5"> <!--Separate div allows for next image to be right of the text-->
+            <iframe allowtransparency="true" width="400" height="320" src="//scratch.mit.edu/projects/embed/244988755/?autostart=false" frameborder="0" allowfullscreen></iframe> <!--Embedded Scratch project-->
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-sm-7">
             <strong>School Experience</strong>
             <h3>MIT App Inventor Project</h3>
             <h4>October 2018</h4>
@@ -59,23 +59,22 @@
             even the smallest part of code, so we can see exactly which blocks 
             need to be fixed.</p>
             <a href="https://docs.google.com/document/d/1L063eZ3N0ONkri-wD_TwD6o_UPvu6V0lV-Ng3lNT8vk/edit?usp=sharingv">Click here to see documentation</a>
-          <div class="row">
-            <img style='max-width:400px; max-height:500px' src="Images/MITAppInventor.png" alt="Image of our State Geography Quiz" width=300px>
-          </div>
+            </div>
+            <div class="col-sm-1"> <!--Filler to make image look lined up to the previous image-->
+            </div>
+          <div class="col-sm-4"> 
+            <img class="center-block" style='max-width:400px; max-height:500px' src="Images/MITAppInventor.png" alt="Image of our State Geography Quiz" height=350px width=200px>
           </div>
         </div>
       </div>
-    <footer>
+    <footer> <!--More related links-->
       <div class="jumbotron">
         <div class="row">
-          <div class= col-3>
+          <div class="col-2">
+          </div>
+          <div class= "col-3">
             <a href="mailto:markowenmacasaet@gmail.com">
               <img src="Images/Mail.png" style='max-width=100px' width=125px height=100px>
-            </a>
-          </div>
-          <div class="col-3">
-            <a href="">
-              <img src="" style='max-width=100px' width=px height=px>
             </a>
           </div>
           <div class="col-5">
