--- a/Mark_Resume.html
+++ b/Mark_Resume.html
@@ -4,7 +4,7 @@
       <link href="bootstrap-4.1.2-dist/css/bootstrap.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <div class="container">
+    <div class="container"> <!--Navbar-->
       <nav class="nav nav-fill nav-pills">
         <a class="nav-item nav-link" href="index.html">Home</a>
         <a class="nav-item nav-link" href="Mark_AboutMe.html">About Me</a>
@@ -13,17 +13,17 @@
         <a class="nav-item nav-link" href="Mark_ContactMe.html">Contact Me</a>
        </nav>
     </div>
-      <div class="jumbotron">
+      <div class="jumbotron"> <!--Makes area to make the page clearly say Resume-->
           <h1>Resume</h1>
-          <p>Here are my skills and achievements that distinguish me from 
+          <p>Here are the skills and achievements that distinguish me from 
           others.</p>
       </div>
-      <div class="container">
+      <div class="container col-6">
         <h4><u>Objective:</u></h4>
         <p>My goal for the future is to obtain and secure a full-time job as an
         aeorospace engineer.</p>
         <h4><u>Education:</u></h4>
-        <ul>
+        <ul> <!--A lot of lists for the resume-->
           <li>Dublin High School</li>
           <li>Freshman year</li>
           <li>Courses: Algebra 2/Trigonometry, Computer Science Principles, 
@@ -53,7 +53,7 @@
         <ul>
           <li>Honor roll for every semester</li>
           <li>Taking an advanced math class (Algebra 2/Trigonometry) for 
-          fresman year.</li>
+          freshman year.</li>
         </ul>
         <h4><u>Extracurricular Activities:</u></h4>
         <ul>
@@ -61,17 +61,14 @@
           <li>Kuk Sool Won (Martial Arts)</li>
         </ul>
       </div>
-    <footer>
+    <footer> <!--More related links-->
       <div class="jumbotron">
         <div class="row">
-          <div class= col-3>
+          <div class="col-2">
+          </div>
+          <div class= "col-3">
             <a href="mailto:markowenmacasaet@gmail.com">
               <img src="Images/Mail.png" style='max-width=100px' width=125px height=100px>
-            </a>
-          </div>
-          <div class="col-3">
-            <a href="">
-              <img src="" style='max-width=100px' width=px height=px>
             </a>
           </div>
           <div class="col-5">
