--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <header>
-      <div class="container">
+      <div class="container"> <!--Navbar-->
         <nav class="nav nav-fill nav-pills">
           <a class="nav-item nav-link active" href="index.html">Home</a>
           <a class="nav-item nav-link" href="Mark_AboutMe.html">About Me</a>
@@ -16,7 +16,7 @@
       </div>
     </header>
     
-    <div class="jumbotron">
+    <div class="jumbotron"> <!--Makes an area to indicate the website is my portfolio-->
       <h1>Mark Owen Macasaet's Portfolio</h1>
       <p>Hi, I am Mark Owen and I am currently a freshman studying at Dublin High School.</p>
       <a href="Mark_AboutMe.html">Continue reading...</a>
@@ -24,7 +24,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
-            <div class="card flex-sm-row">
+            <div class="card flex-sm-row"> <!--Makes a card for Scratch Project CSP-->
               <div class="card-body">
                 <strong>School Project</strong>
                 <h3>Scratch Project CSP</h3>
@@ -33,11 +33,11 @@
                 Smash Bros. style game where players must be the last one alive.</p>
                 <a href="Mark_Projects.html">Continue reading...</a>
               </div>
-              <img class="card-img-right" style='max-width:250px; max-height:250px' src="Images/Scratch.png" alt="Image of our Scratch game" height=250px width=175px>
+              <img class="card-img-right" style='max-width:250px; max-height:250px' src="Images/Scratch.png" alt="Image of our Scratch game" width=175px>
             </div>
           </div>
           <div class="col-sm-6">
-            <div class="card flex-sm-row">
+            <div class="card flex-sm-row"> <!--Makes a card for MIT App Inventor Project-->
               <div class="card-body">
                 <strong>School Experience</strong>
                 <h3>MIT App Inventor Project</h3>
@@ -50,7 +50,7 @@
             </div>
           </div>
           <div class="col-sm-6">
-            <div class="card flex-sm-row">
+            <div class="card flex-sm-row"> <!--Makes a card for Orchestra-->
               <div class="card-body">
                 <strong>School Experience</strong>
                 <h3>Orchestra</h3>
@@ -64,7 +64,7 @@
             </div>
           </div>
           <div class="col-sm-6">
-            <div class="card flex-sm-row">
+            <div class="card flex-sm-row"> <!--Makes a card for Martial Arts-->
               <div class="card-body">
                 <strong>Activities</strong>
                 <h3>Martial Arts</h3>
@@ -82,17 +82,14 @@
     <footer>
       <div class="jumbotron">
         <div class="row">
-          <div class= col-3>
+          <div class="col-2"> <!--Filler for space-->
+          </div>
+          <div class= "col-3"> <!--Link to my proffesional email-->
             <a href="mailto:markowenmacasaet@gmail.com">
               <img src="Images/Mail.png" style='max-width=100px' width=125px height=100px>
             </a>
           </div>
-          <div class="col-3">
-            <a href="">
-              <img src="" style='max-width=100px' width=px height=px>
-            </a>
-          </div>
-          <div class="col-5">
+          <div class="col-5"> <!--Link to DHS website-->
             <a href="https://www.dublin.k12.ca.us/dhs">
               <img src="Images/DHSlogo.png" style='max-width:100px' class="float-right" >
             </a>
