--- a/Mark_ContactMe.html
+++ b/Mark_ContactMe.html
@@ -4,7 +4,7 @@
       <link href="bootstrap-4.1.2-dist/css/bootstrap.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <div class="container">
+    <div class="container"> <!--navbar-->
       <nav class="nav nav-fill nav-pills">
         <a class="nav-item nav-link" href="index.html">Home</a>
         <a class="nav-item nav-link" href="Mark_AboutMe.html">About Me</a>
@@ -18,23 +18,20 @@
           <p>Here is my personal information if you would like to communicate
           with me.</p>
       </div>
-        <div class="container">
+        <div class="container text-center"> <!--Centers content to look neat-->
           <h4>Mark Owen Macasaet</h4>
           <h4>Email: markowenmacasaet@gmail.com</h4>
           <h4>Location: Dublin, CA</h4>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50496.944840653094!2d-121.94538150739196!3d37.718291716539056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fe65cd6892231%3A0x3b327c848ef64057!2sDublin%2C+CA+94568!5e0!3m2!1sen!2sus!4v1543511985345" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50496.944840653094!2d-121.94538150739196!3d37.718291716539056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fe65cd6892231%3A0x3b327c848ef64057!2sDublin%2C+CA+94568!5e0!3m2!1sen!2sus!4v1543511985345" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe> <!--Embedded Google Maps to show my location-->
         </div>
-    <footer>
+    <footer> <!--More related links-->
       <div class="jumbotron">
         <div class="row">
-          <div class= col-3>
+          <div class="col-2">
+          </div>
+          <div class= "col-3">
             <a href="mailto:markowenmacasaet@gmail.com">
               <img src="Images/Mail.png" style='max-width=100px' width=125px height=100px>
-            </a>
-          </div>
-          <div class="col-3">
-            <a href="">
-              <img src="" style='max-width=100px' width=px height=px>
             </a>
           </div>
           <div class="col-5">
