Updated Online Portfolio

--- a/Mark_Projects.html
+++ b/Mark_Projects.html
@@ -13,9 +13,10 @@
         <a class="nav-item nav-link" href="Mark_ContactMe.html">Contact Me</a>
        </nav>
     </div>
-    <div class="jumbotron">
-      <h1>Projects</h1>
-      <p>Here are school projects I have worked on so far in this school year.</p>
+    <div class="jumbotron text-center">
+      <h1 class = "container">Projects</h1>
+      <p class = "container">Here are school projects I have worked on so far 
+      in this school year.</p>
     </div>
       <div class="container">
         <div class="row"> <!--Makes sure that all content is arranged in rows for organization-->
@@ -34,12 +35,15 @@
             coordination and so we designated parts for each of us to complete. 
             We also made sure we had days when we would remix each other's 
             projects to keep the features up to date.</p>
-            <a href="https://docs.google.com/document/d/1MoVRcfQbzQwSf_Of1W-ZBfRAayjx381MG0O0Gyib9ZY/edit?usp=sharing">Click here to see documentation</a>
+            <a href="https://docs.google.com/document/d/1MoVRcfQbzQwSf_Of1W-ZBfRAayjx381MG0O0Gyib9ZY/edit?usp=sharing">
+            Click here to see documentation</a>
             </div>
           <div class="col-sm-5"> <!--Separate div allows for next image to be right of the text-->
             <iframe allowtransparency="true" width="400" height="320" src="//scratch.mit.edu/projects/embed/244988755/?autostart=false" frameborder="0" allowfullscreen></iframe> <!--Embedded Scratch project-->
           </div>
         </div>
+        </br>
+        </br>
         <div class="row">
           <div class="col-sm-7">
             <strong>School Experience</strong>
@@ -58,7 +62,8 @@
             constantly running the app on the tablets as a test after we change 
             even the smallest part of code, so we can see exactly which blocks 
             need to be fixed.</p>
-            <a href="https://docs.google.com/document/d/1L063eZ3N0ONkri-wD_TwD6o_UPvu6V0lV-Ng3lNT8vk/edit?usp=sharingv">Click here to see documentation</a>
+            <a href="https://docs.google.com/document/d/1L063eZ3N0ONkri-wD_TwD6o_UPvu6V0lV-Ng3lNT8vk/edit?usp=sharingv">
+            Click here to see documentation</a>
             </div>
             <div class="col-sm-1"> <!--Filler to make image look lined up to the previous image-->
             </div>
@@ -66,18 +71,40 @@
             <img class="center-block" style='max-width:400px; max-height:500px' src="Images/MITAppInventor.png" alt="Image of our State Geography Quiz" height=350px width=200px>
           </div>
         </div>
-      </div>
-    <footer> <!--More related links-->
-      <div class="jumbotron">
+        </br>
+        </br>
         <div class="row">
-          <div class="col-2">
+          <div class="col-sm-7">
+            <strong>School Experience</strong>
+            <h3>Image Manipulation Project</h3>
+            <h4>October 2018</h4>
+            <p>This project required extensive research to figure out multiple
+            ways to add shapes and frames onto any given image.  This took over
+            three weeks to complete, and I was successful in creating four 
+            different functions utilizing multiple libraries to add frames. The
+            project was created with Python programming, and images were put as 
+            input to make four different outputs, each a different frame.</p>
+            <a href="https://docs.google.com/document/d/160jCft_jrgLRkgbRh2MRE-Tqs1GbP8OJppjzi1V9A_w/edit?usp=sharing">
+            Click here to see documentation</a>
+            </div>
+            
+            <div class="col-sm-1">
+            </div>
+          <div class="col-sm-4"> 
+            <img class="center-block" style='max-width:400px; max-height:500px' src="Images/ImgManipulation.png" alt="Diagram of four frame manipulations" height=350px width=200px>
           </div>
-          <div class= "col-3">
+        </div>
+    <footer>
+      <div class="jumbotron container">
+        <div class="row">
+          <div class="col-2"> <!--Filler for space-->
+          </div>
+          <div class= "col-3"> <!--Link to my proffesional email-->
             <a href="mailto:markowenmacasaet@gmail.com">
               <img src="Images/Mail.png" style='max-width=100px' width=125px height=100px>
             </a>
           </div>
-          <div class="col-5">
+          <div class="col-5"> <!--Link to DHS website-->
             <a href="https://www.dublin.k12.ca.us/dhs">
               <img src="Images/DHSlogo.png" style='max-width:100px' class="float-right" >
             </a>
