--- a/Mark_Resume.html
+++ b/Mark_Resume.html
@@ -13,10 +13,10 @@
         <a class="nav-item nav-link" href="Mark_ContactMe.html">Contact Me</a>
        </nav>
     </div>
-      <div class="jumbotron"> <!--Makes area to make the page clearly say Resume-->
-          <h1>Resume</h1>
-          <p>Here are the skills and achievements that distinguish me from 
-          others.</p>
+      <div class="jumbotron text-center"> <!--Makes area to make the page clearly say Resume-->
+          <h1 class = "container">Resume</h1>
+          <p class = "container">Here are the skills and achievements that 
+          distinguish me from others.</p>
       </div>
       <div class="container col-6">
         <h4><u>Objective:</u></h4>
@@ -39,7 +39,7 @@
         </ul>
         <h4><u>Skills:</u></h4>
         <ul>
-          <li>Basic Spanish</li>
+          <li>Proficient Spanish</li>
           <li>Basic coding (HTML, CSS, Command Line, Bootstrap, and Python)</li>
           <li>Music composition</li>
           <li>Self-motivation</li>
@@ -52,17 +52,18 @@
         <h4><u>Academic Achievements:</u></h4>
         <ul>
           <li>Honor roll for every semester</li>
+          <li>Having a 4.0 GPA for the first, second and third quarters</li>
           <li>Taking an advanced math class (Algebra 2/Trigonometry) for 
-          freshman year.</li>
+          freshman year</li>
         </ul>
         <h4><u>Extracurricular Activities:</u></h4>
         <ul>
           <li>Violin</li>
-          <li>Kuk Sool Won (Martial Arts)</li>
         </ul>
+        </br>
       </div>
     <footer> <!--More related links-->
-      <div class="jumbotron">
+      <div class="jumbotron container">
         <div class="row">
           <div class="col-2">
           </div>
