--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
       <link href="bootstrap-4.1.2-dist/css/bootstrap.css" type="text/css" rel="stylesheet">
   </head>
-  <body>
+  <body class>
     <header>
       <div class="container"> <!--Navbar-->
         <nav class="nav nav-fill nav-pills">
@@ -16,9 +16,9 @@
       </div>
     </header>
     
-    <div class="jumbotron"> <!--Makes an area to indicate the website is my portfolio-->
-      <h1>Mark Owen Macasaet's Portfolio</h1>
-      <p>Hi, I am Mark Owen and I am currently a freshman studying at Dublin High School.</p>
+    <div class="jumbotron text-center"> <!--Makes an area to indicate the website is my portfolio-->
+      <h1 class = "container">Mark Owen Macasaet's Portfolio</h1>
+      <p class = "container">Hi, I am Mark Owen and I am currently a freshman studying at Dublin High School.</p>
       <a href="Mark_AboutMe.html">Continue reading...</a>
     </div>
       <div class="container">
@@ -66,21 +66,21 @@
           <div class="col-sm-6">
             <div class="card flex-sm-row"> <!--Makes a card for Martial Arts-->
               <div class="card-body">
-                <strong>Activities</strong>
-                <h3>Martial Arts</h3>
-                <h4>5-Year Experience</h4>
-                <p>I take three classes a week and attend yearly tournaments to
-                 earn medals and keep our school reputation.</p>
+                <strong>School Experience</strong>
+                <h3>Image Manipulation Project</h3>
+                <h4>February 2019</h4>
+                <p>This project required extensive research on different methods
+                to produce different types of frames onto given images.</p>
                 <a href="Mark_Resume.html">Continue reading...</a>
               </div>
-              <img class="card-img-right" style='max-width:250px; max-height:250px' src="Images/WKSA.png" alt="Kuk Sool Won Association" width=175px>
+              <img class="card-img-right" style='max-width:250px; max-height:250px' src="Images/ImgManipulation.png" alt="Diagram of four frame manipulations" width=175px>
             </div>
           </div>
         </div>
       </div>
     
     <footer>
-      <div class="jumbotron">
+      <div class="jumbotron container">
         <div class="row">
           <div class="col-2"> <!--Filler for space-->
           </div>
