--- a/Mark_AboutMe.html
+++ b/Mark_AboutMe.html
@@ -13,9 +13,9 @@
         <a class="nav-item nav-link" href="Mark_ContactMe.html">Contact Me</a>
       </nav>
     </div>
-    <div class="jumbotron">
-      <h1>Online Portfolio</h1>
-      <p>You can contact me at markowenmacasaet@gmail.com</p>
+    <div class="jumbotron text-center">
+      <h1 class = "container">Online Portfolio</h1>
+      <p class = "container">You can contact me at markowenmacasaet@gmail.com</p>
     </div>
     
     <section class="main">
@@ -76,7 +76,7 @@
     </section>
     
     <footer> <!--More links related-->
-      <div class="jumbotron">
+      <div class="jumbotron container">
         <div class="row">
           <div class="col-2">
           </div>
