--- a/Mark_ContactMe.html
+++ b/Mark_ContactMe.html
@@ -10,13 +10,14 @@
         <a class="nav-item nav-link" href="Mark_AboutMe.html">About Me</a>
         <a class="nav-item nav-link" href="Mark_Resume.html">Resume</a>
         <a class="nav-item nav-link" href="Mark_Projects.html">Projects</a>
-        <a class="nav-item nav-link active" href="Mark_ContactMe.html">Contact Me</a>
+        <a class="nav-item nav-link active" href="Mark_ContactMe.html">Contact 
+        Me</a>
        </nav>
     </div>
-      <div class="jumbotron">
-          <h1>Contact Me</h1>
-          <p>Here is my personal information if you would like to communicate
-          with me.</p>
+      <div class="jumbotron text-center">
+          <h1 class = "container">Contact Me</h1>
+          <p class = "container">Here is my personal information if you would 
+          like to communicate with me.</p>
       </div>
         <div class="container text-center"> <!--Centers content to look neat-->
           <h4>Mark Owen Macasaet</h4>
@@ -25,7 +26,7 @@
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50496.944840653094!2d-121.94538150739196!3d37.718291716539056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fe65cd6892231%3A0x3b327c848ef64057!2sDublin%2C+CA+94568!5e0!3m2!1sen!2sus!4v1543511985345" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe> <!--Embedded Google Maps to show my location-->
         </div>
     <footer> <!--More related links-->
-      <div class="jumbotron">
+      <div class="jumbotron container">
         <div class="row">
           <div class="col-2">
           </div>
